# bedrock-workshop

./: .gitignore  pyproject.toml  requirements.txt
00_Prerequisites/: bedrock_basics.ipynb
01_Text_generation/: 00_text_generation_w_bedrock.ipynb  01_code_generation_w_bedrock.ipynb  02_text-summarization-titan+claude.ipynb  03_qa_with_bedrock_titan.ipynb  04_entity_extraction.ipynb
02_KnowledgeBases_and_RAG/: 0_create_ingest_documents_test_kb.ipynb  1_managed-rag-kb-retrieve-generate-api.ipynb
